--- a/MacroRePlayer/MacroRePlayer.csproj
+++ b/MacroRePlayer/MacroRePlayer.csproj
@@ -60,6 +60,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="InputEvent.cs" />
+    <Compile Include="InputEventJsonConvertor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
