--- a/MacroRePlayer/MacroRePlayer.csproj
+++ b/MacroRePlayer/MacroRePlayer.csproj
@@ -53,6 +53,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EventDisplayFunctionCreater.cs" />
+    <Compile Include="EventDisplayHelper.cs" />
+    <Compile Include="EventEditorPanelBoxes.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
