Přidání nových UI prvků a funkčnost LeftDrag
Přidány nové UI prvky v `Form1.Designer.cs`, včetně textových polí, tlačítek a štítků pro ovládání přehrávání a nastavení klávesových zkratek. Odstraněny duplicitní UI prvky, které byly dříve definovány. Aktualizováno uspořádání `PlayerGroupBox` pro zahrnutí nových ovládacích prvků. Přidány obslužné rutiny událostí pro nová tlačítka a aktualizována funkcionalita stávajících tlačítek pro zahrnutí asynchronních operací.

Zavedené nové tlačítko `TestButton`, které provádí sérii akcí, včetně přesunutí okna na pozadí a malování čar na obrazovce. Upravena `PlayerComboBox` pro vyčištění položek a jejich naplnění na základě existence JSON souborů ve specifikovaném adresáři. Vylepšena metoda `StartPlayingMacroButton_Click` pro kontrolu existence souboru a deserializaci JSON dat do seznamu událostí vstupu.

Přidány nové metody pro simulaci akcí myši a zpracování klávesových událostí. Zavedená nová třída `InputSender` v `InputSender.cs` pro zapouzdření metod pro odesílání klávesových a myších vstupů, včetně potřebných P/Invoke deklarací. Aktualizován projektový soubor `MacroRePlayer.csproj` pro zahrnutí nového souboru `InputSender.cs` do kompilace.

--- a/MacroRePlayer/MacroRePlayer.csproj
+++ b/MacroRePlayer/MacroRePlayer.csproj
@@ -67,6 +67,7 @@
     </Compile>
     <Compile Include="InputEvent.cs" />
     <Compile Include="InputEventJsonConvertor.cs" />
+    <Compile Include="InputSender.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="EditorForm.resx">
