--- a/MacroRePlayer/MacroRePlayer.csproj
+++ b/MacroRePlayer/MacroRePlayer.csproj
@@ -59,11 +59,12 @@
     <Compile Include="EditorForm.Designer.cs">
       <DependentUpon>EditorForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="KeyboardLayoutHelper.cs" />
+    <Compile Include="RePlayerForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="RePlayerForm.Designer.cs">
+      <DependentUpon>RePlayerForm.cs</DependentUpon>
     </Compile>
     <Compile Include="InputEvent.cs" />
     <Compile Include="InputEventJsonConvertor.cs" />
@@ -73,8 +74,8 @@
     <EmbeddedResource Include="EditorForm.resx">
       <DependentUpon>EditorForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="RePlayerForm.resx">
+      <DependentUpon>RePlayerForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
