Změny v systému správy událostí
Byly provedeny významné úpravy v souboru `EditorForm.Designer.cs`, včetně odstranění několika tlačítek pro správu událostí a zavedení nového `DataGridView` s názvem `EditorEventsDataGridView`, který obsahuje sloupce pro ikony, události, hodnoty a komentáře. Rozložení bylo upraveno a `EventNamesOnlyList` byl odstraněn z uživatelského rozhraní.

V souboru `EditorForm.cs` byly odstraněny různé obslužné rutiny událostí a uživatelské prvky související s myší a klávesnicí. Logika pro zpracování výběru událostí a aktualizaci ovládacích prvků byla přepracována pro práci s novým `DataGridView`.

Byl zaveden nový formulář `EventValueForm`, který umožňuje uživatelům specifikovat podrobnosti pro události myši a klávesnice, včetně souřadnic X a Y, typů tlačítek a zpoždění.

Soubor `InputEvent.cs` byl upraven tak, aby zahrnoval vlastnost `Code` pro `KeyDownEvent` a `KeyUpEvent`, což umožňuje ukládání virtuálních kódů kláves spolu s názvy kláves.

Projektový soubor (`MacroRePlayer.csproj`) byl aktualizován, aby zahrnoval nový `EventValueForm` a jeho designer, což zajišťuje jejich kompilaci jako součást projektu.

Soubor `RePlayerForm.cs` byl aktualizován o deklaraci P/Invoke pro `MapVirtualKey`, což umožňuje programu získat hardware kód klávesy pro zaznamenané události kláves.

Celkově tyto změny zlepšují funkčnost systému správy událostí v aplikaci, což umožňuje podrobnější zpracování událostí a uživatelsky přívětivější rozhraní pro úpravu hodnot událostí.

--- a/MacroRePlayer/MacroRePlayer.csproj
+++ b/MacroRePlayer/MacroRePlayer.csproj
@@ -59,6 +59,12 @@
     <Compile Include="EditorForm.Designer.cs">
       <DependentUpon>EditorForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="EventValueForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EventValueForm.Designer.cs">
+      <DependentUpon>EventValueForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="KeyboardLayoutHelper.cs" />
     <Compile Include="RePlayerForm.cs">
       <SubType>Form</SubType>
@@ -79,6 +85,9 @@
     </Compile>
     <EmbeddedResource Include="EditorForm.resx">
       <DependentUpon>EditorForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EventValueForm.resx">
+      <DependentUpon>EventValueForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="RePlayerForm.resx">
       <DependentUpon>RePlayerForm.cs</DependentUpon>
